--- a/index.html
+++ b/index.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Browser Object Model</title>
+    <meta charset="utf-8">
+    <title>Quintyn Williams</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/loader.css">
 </head>
 <body>
-<h1>Hello World</h1>
+
+<script type="module" src="/main.js"></script>
+
+<div class="hexagon" aria-label="Animated hexagonal ripples">
+    <div class="hexagon__group">
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+    </div>
+    <div class="hexagon__group">
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+    </div>
+    <div class="hexagon__group">
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+    </div>
+    <div class="hexagon__group">
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+    </div>
+    <div class="hexagon__group">
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+    </div>
+    <div class="hexagon__group">
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+        <div class="hexagon__sector"></div>
+    </div>
+</div>
+<h1>Currently Working</h1>
+
 </body>
+
+<!--    <div class="page">-->
+<!--        <div class="keyart" id="parallax">-->
+<!--            <div class="keyart_layer" id="keyart-8"></div>-->
+<!--            <div class="keyart_layer" id="keyart-7"></div>-->
+<!--            <div class="keyart_layer" id="keyart-6"></div>-->
+<!--            <div class="keyart_layer" id="keyart-5"></div>-->
+<!--            <div class="keyart_layer" id="keyart-4"></div>-->
+<!--            <div class="keyart_layer" id="keyart-3"></div>-->
+<!--            <div class="keyart_layer" id="keyart-2"></div>-->
+<!--            <div class="keyart_layer" id="keyart-1"></div>-->
+<!--            <div class="keyart_layer" id="keyart-0"></div>-->
+<!--        </div>-->
+<!--        <div class="overflow">-->
+<!--            <h1>CSS Parallax Scrolling</h1>-->
+<!--        </div>-->
+<!--    </div>-->
+
+
 </html>
