--- a/index.html
+++ b/index.html
@@ -2,84 +2,159 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Quintyn Williams</title>
+    <link rel="stylesheet" href="css/resets.css">
+    <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/burgers.css">
 </head>
 <body>
+<div class="page-wrapper">
+    <div class="container">
+        <div id="intro-content" class="column justify-space-between align-center">
 
-<script type="module" src="/main.js"></script>
+            <div id="logo-container" class="column justify-space-between align-center">
+                <div>
+                    <div class="hero-container column justify-space-between">
+                        <div class="environment"></div>
+                        <h2 class="hero glitch layers" data-text="QUIN">
+                            <div class="logo">
+                                <div>
+                                    <span>O</span>
+                                    <span>U</span>
+                                    <span>i</span>
+                                    <span>n</span>
+                                </div>
+                                <div>
+                                    <span>q</span>
+                                    <span>u</span>
+                                    <span>I</span>
+                                    <span>N</span>
+                                </div>
+                            </div>
+                        </h2>
+                    </div>
+                </div>
 
-<div class="hexagon" aria-label="Animated hexagonal ripples">
-    <div class="hexagon__group">
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
+                <div id="logo-sub">Full StACK DEVELOPER</div>
+            </div>
+
+            <div class="marquee">
+                <div class="track">
+                    <div class="content">&nbsp;
+                        <span>DESIGN • </span>
+                        <span>UX/UI • </span>
+                        <span>ANIMATION • </span>
+                        <span>DATA </span>
+                        <span>ILLUSTRATION • </span>
+                        <span>ANALYSIS • </span>
+                        <span>DESIGN • </span>
+                        <span>UX/UI • </span>
+                        <span>ANIMATION • </span>
+                        <span>DATA </span>
+                        <span>ILLUSTRATION • </span>
+                        <span>ANALYSIS • </span>
+                    </div>
+                </div>
+            </div>
+
+            <div id="call-action" class="row justify-space-between">
+                <div id="slogan">
+                    <p>CRAFTING</p>
+                    <p>ANYTHING BUT</p>
+                    <p>ORDINARY WEB EXPERIENCES</p>
+                </div>
+
+                <div id="menu" class="row justify-space-between align-center">
+                    <button id="aboutLi" class="button-49"> <a href="#about"> AbOUt Me </a> </button>
+                    <button id="portfolioLi" class="button-49"> <a href="#portfolio"> POrtFolIo </a> </button>
+                    <button id="contactLi" class="button-49"> <a href="#contact"> ContACT </a> </button>
+                </div>
+            </div>
+        </div>
+
+        <div id="about" class="sections row">
+            <div class="section-title column">
+                <span>A</span>
+                <span>B</span>
+                <span>O</span>
+                <span>U</span>
+                <span>T</span>
+                <span>M</span>
+                <span>E</span>
+            </div>
+            <div>
+                <div class="section-body">
+                    As an intelligence analyst in the Marine Corps, I gained inspiration to learn to code from my first-hand experience with UX/UI design and the power of data analysis software. I hope to be part of building engaging and persuasive interfaces that enhance user confidence to reach their goals.
+                </div>
+                <div class="section-body">
+                    While absent from the keyboard, I enjoy exploring unique sound designs through tinkering with effects pedals and music production software with friends.
+                </div>
+
+                <div>
+
+                </div>
+            </div>
+        </div>
+        <div id="portfolio" class="sections row">
+            <div class="section-img column">
+                <div>
+                    <p>Movie Review</p>
+                    <img class="preview" src="https://placehold.co/600x400">
+                </div>
+                <div>
+                    <p>Coffee Shop</p>
+                    <img class="preview" src="https://placehold.co/600x400">
+                </div>
+
+            </div>
+
+            <div class="section-title column">
+                <span>P</span>
+                <span>O</span>
+                <span>R</span>
+                <span>T</span>
+                <span>F</span>
+                <span>O</span>
+                <span>L</span>
+                <span>I</span>
+                <span>O</span>
+            </div>
+
+            <div class="section-img column">
+                <div>
+                    <p>Weather Map</p>
+                    <img class="preview" src="https://placehold.co/600x400">
+                </div>
+                <div>
+                    <p>Game</p>
+                    <img class="preview" src="https://placehold.co/600x400">
+                </div>
+            </div>
+        </div>
+        <div id="contact" class="sections row">
+            <div class="section-title column">
+                <span>C</span>
+                <span>O</span>
+                <span>N</span>
+                <span>T</span>
+                <span>A</span>
+                <span>C</span>
+                <span>T</span>
+            </div>
+            <div class="section-body">
+                <p>incoming</p>
+            </div>
+        </div>
+
     </div>
-    <div class="hexagon__group">
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-    </div>
-    <div class="hexagon__group">
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-    </div>
-    <div class="hexagon__group">
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-    </div>
-    <div class="hexagon__group">
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-    </div>
-    <div class="hexagon__group">
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-        <div class="hexagon__sector"></div>
-    </div>
+
+
+
 </div>
-<h1>Currently Working</h1>
 
+
+<script type="module" src="js/index.js"></script>
 </body>
-
-<!--    <div class="page">-->
-<!--        <div class="keyart" id="parallax">-->
-<!--            <div class="keyart_layer" id="keyart-8"></div>-->
-<!--            <div class="keyart_layer" id="keyart-7"></div>-->
-<!--            <div class="keyart_layer" id="keyart-6"></div>-->
-<!--            <div class="keyart_layer" id="keyart-5"></div>-->
-<!--            <div class="keyart_layer" id="keyart-4"></div>-->
-<!--            <div class="keyart_layer" id="keyart-3"></div>-->
-<!--            <div class="keyart_layer" id="keyart-2"></div>-->
-<!--            <div class="keyart_layer" id="keyart-1"></div>-->
-<!--            <div class="keyart_layer" id="keyart-0"></div>-->
-<!--        </div>-->
-<!--        <div class="overflow">-->
-<!--            <h1>CSS Parallax Scrolling</h1>-->
-<!--        </div>-->
-<!--    </div>-->
-
-
 </html>
