--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 </div>
 
                 <div id="menu" class="row justify-space-between align-center">
-                    <button id="aboutLi" class="button-49"> <a href="#about"> AbOUt Me </a> </button>
-                    <button id="portfolioLi" class="button-49"> <a href="#portfolio"> POrtFolIo </a> </button>
-                    <button id="contactLi" class="button-49"> <a href="#contact"> ContACT </a> </button>
+                    <a href="#about"> <button id="aboutLi" class="button-49"> AbOUt Me </button> </a>
+                    <a href="#portfolio"> <button id="portfolioLi" class="button-49"> POrtFolIo </button> </a>
+                    <a href="#contact"> <button id="contactLi" class="button-49"> ContACT </button> </a>
                 </div>
             </div>
         </div>
